@startuml

[*] --> CREATED : create
CREATED --> ASSIGNED : assign
ASSIGNED --> IN_PROGRESS : start
CREATED --> CANCELED : cancel
ASSIGNED --> CANCELED : cancel
ASSIGNED --> CREATED : unassign
IN_PROGRESS --> FINISHED : finish
IN_PROGRESS --> ABORTED : abort
FINISHED --> [*]
ABORTED --> [*]
CANCELED --> [*]

@enduml